Don't check if the UDisks service is valid - just try to connect the signals.

UDisks is an autostart service, which means that it may not be valid _until_ we try to connect.

BUG: 257210


svn path=/trunk/KDE/kdelibs/; revision=1198261